css/style.css
html {
  box-sizing: border-box;
}

:root {
  --white: #ffffff;
  --amber: #ffbf00;
  --raspberry: #db1a50;
  --black: #08090c;
  --turquoise: #41e1be;
  --ucla-blue: #2274a5;
}

body {
  color: var(--white);
  background-color: var(--black);
  margin-left: 20px;
  margin-right: 20px;
}

h1 {
  font-family: "Outfit", sans-serif;
  font-weight: 700;
  font-size: 57px;
  font-style: normal;
  line-height: 100%;
  letter-spacing: 4px;
  text-align: left;
}

h2 {
  font-family: "Outfit", sans-serif;
  font-weight: 500;
  line-height: 100%;
  font-size: 26px;
  letter-spacing: 3px;
  text-align: left;
}

h3 {
  font-family: "Dosis", sans-serif;
  font-weight: 700;
  line-height: 150%;
  font-size: 26px;
  letter-spacing: 2px;
  text-align: left;
}

p {
  font-family: "Dosis", sans-serif;
  font-weight: 600;
  line-height: 100%;
  font-size: 20px;
  letter-spacing: 0.5px;
}

.topnav {
  display: flex;
  flex-direction: row;
  position: relative;
  font-family: "Outfit", sans-serif;
  font-weight: 300;
  gap: 60px;
  justify-content: right;
  overflow: hidden;
  top: 10px;
}

.myLinks {
  display: inline-flex;
  gap: 10px;
  top: 50px;
  z-index: 100;
}

.topnav a {
  color: aliceblue;
  text-align: center;
}

.topnav a:hover {
  color: var(--amber);
}
.topnav .icon {
  display: hidden;
}

.hidden {
  display: none;
}
.hero-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-wrap: nowrap;
}

.hero-body p {
  text-align: center;
}

.header-icons {
  align-items: center;
  max-width: 40%;
  gap: 20px;
}

button {
  border: none;
  border-radius: 20px;
  background-color: var(--turquoise);
  font-family: "Dosis", sans-serif;
  font-weight: 800;
  line-height: 100%;
  font-size: 18px;
  letter-spacing: 2px;
  padding: 5px 20px 5px 20px;
}

.card-1 {
  display: flex;
  align-content: space-around;
  flex-wrap: wrap;
  flex-direction: column;
}

.projects {
  padding: 40px;
}

.languages {
  display: flex;
  align-items: center;
  padding-left: 20px;
}
.profile-img {
  max-width: 80%;
  border: none;
  border-radius: 15px;
}

.project-img {
  max-width: 60%;
  border: none;
  border-radius: 15px;
}

.project-1 {
  font-family: "Outfit", sans-serif;
  font-weight: bolder;
  list-style: none;
}

.project-1:hover {
  cursor: pointer;
  color: var(--amber);
}

.connect-social-icons {
  display: flex;
  align-items: flex-end;
  gap: 20px;
}

.svgContainer {
  min-width: 60px;
}

.languages {
  display: flex;
  align-items: center;
  gap: 10px;
  max-width: 20%;
}
.contact-form {
  max-width: 70%;
  font-family: "Dosis", sans-serif;
  font-size: 25px;
}

input,
textarea {
  padding: 10px;
  width: 100%;
  margin-top: 20px;
  font-family: "Dosis", sans-serif;
  font-size: 30px;
  color: var(--raspberry);
}

.submit-button {
  display: flex;
  flex-direction: inherit;
}

hr {
  margin-top: 20px;
  margin-bottom: 20px;
}

/* adjust text */
.topnav {
  font-size: 20px;
  letter-spacing: 2px;
}

h1 {
  font-size: 60px;
}

h2 {
  font-size: 55px;
}
p {
  font-size: 25px;
}
/* form input {
  font-size: 30px; */
/* } */
button {
  font-size: 30px;
}

/* hover attributes */

.topnav a:hover {
  color: var(--amber);
  font-size: xx-large;
}

a:hover {
  font-size: xx-large;
  color: var(--amber);
}
/* want buttons to toggle from turquoise to blue when clicked/hover */

/* resize icons to be the same across page */
.social-icons {
  display: flex;
  max-width: 40%;
}

.connect-social-icons {
  display: flex;
  max-width: 5%;
}
/* remove underline style of hyperlinks to use color only to make them stand out */
/* toggle hyperlinks from blue to amber color vars when clicked/hover */

/* maybe have menu links scroll user to anchor on page via section  */

/* media query */

/* styles for devices larger than 600px */
@media screen and (min-width: 600px) {
  /* hiding mobile menu */
  .mobile-menu {
    display: none;
  }
  .myLinks {
    display: block;
  }
  /* projects section to change to side by side */
  .projects {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .card-2,
  .card-3 {
    width: 40%;
  }
}
/* styles for devices larger than 1080px */
@media screen and (min-width: 1080px) {
  /* change width size to fit larger screen */
  .card-2,
  .card-3 {
    width: 45%;
  }

  .languages {
    display: flex;
    width: 10%;
    margin: 50px;
    padding-left: 400px;
  }
}

